    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve create project modal UI / UX
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out image when deploying cloud-config

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance
    Show image variants when searching images from remotes (#380)
    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)
    Display dates in local browser time (#370)
    Run cron jobs at time specified by timezone setting (#372)

Fixed
    Enforcing backup retention limit
    Typo in the reset admin password docs (#410)
    Hosts that dont support projects break project analytics (#404)

Breaking API Changes
    Change response of GetInstanceTypes api

0.12.0 - 15/04/2020

Changed
    Instance's will now be deleted after a migration
    Site title based on user input or default of "LXD Mosaic" (#239)

Added
    Tooltips to buttons in the navigation bar (#342)
    Cron job to gather project analytics (#314)
    Option to load vm console in its own tab (#324)
    View in settings to download old analytics data (#315)
    Network dashboard (#167)
    Setting to store site title (#239)
    Allow logging in with LDAP mail address (#359)

Removed
    Cron job to gather old dashboard metrics (#315)

Fixed
    Cant create backups from web ui (#351)